--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "main": "index.js",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^3.0.3"
   }
