--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,8 +7,8 @@
   "module": "dist/index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsup src/index.ts  --format esm,cjs --dts",
-    "dev": "tsup src/index.ts  --format esm,cjs --dts",
+    "build": "tsup src/index.tsx  --format esm,cjs --dts --external react",
+    "dev": "tsup src/index.tsx  --format esm,cjs --dts --external react",
     "lint": "eslint src/**/*.ts* --fix"
   },
   "keywords": [],
@@ -18,6 +18,9 @@
     "@quasar/eslint-config": "*",
     "@quasar/tokens": "*",
     "@quasar/ts-config": "*",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
+    "react": "^18.2.0",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
   }
